Springall/hw2/deliverables/problem-1.1-firewall.txt
# Generated by iptables-save v1.8.5 on Sat Sep 19 16:50:33 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 20 -j DROP
-A INPUT -p tcp -m tcp --dport 21 -j DROP
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p tcp -m tcp --dport 23 -j DROP
-A INPUT -p tcp -m tcp --dport 69 -j DROP
-A INPUT -p tcp -m tcp --dport 989 -j DROP
-A INPUT -p tcp -m tcp --dport 990 -j DROP
-A INPUT -p tcp -m tcp --dport 992 -j DROP
-A INPUT -p tcp -m tcp --dport 3389 -j DROP
-A INPUT -p udp -m udp --dport 20 -j DROP
-A INPUT -p udp -m udp --dport 21 -j DROP
-A INPUT -p udp -m udp --dport 22 -j DROP
-A INPUT -p udp -m udp --dport 23 -j DROP
-A INPUT -p udp -m udp --dport 69 -j DROP
-A INPUT -p udp -m udp --dport 989 -j DROP
-A INPUT -p udp -m udp --dport 990 -j DROP
-A INPUT -p udp -m udp --dport 992 -j DROP
-A INPUT -p udp -m udp --dport 3389 -j DROP
COMMIT
# Completed on Sat Sep 19 16:50:33 2020
