Springall/hw2/deliverables/problem-1.2-firewall.txt
# Generated by iptables-save v1.8.5 on Sun Sep 20 16:27:04 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 110 -j DROP
-A INPUT -p udp -m udp --dport 110 -j DROP
-A INPUT -d 1.1.1.3/32 -j DROP
-A INPUT -s 173.245.48.0/20 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 103.21.244.0/22 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 103.22.200.0/22 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 103.31.4.0/22 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 141.101.64.0/18 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 108.162.192.0/18 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 190.93.240.0/20 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 188.114.96.0/20 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 197.234.240.0/22 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 198.41.128.0/17 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 173.245.48.0/20 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 104.16.0.0/12 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 172.64.0.0/13 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -s 131.0.72.0/22 -d 1.1.1.3/32 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -j DROP
-A INPUT -p tcp -m tcp --dport 21 -j DROP
-A INPUT -p udp -m udp --dport 20 -j DROP
-A INPUT -p udp -m udp --dport 21 -j DROP
-A INPUT -s 175.45.176.0/24 -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -s 175.45.176.0/24 -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -s 175.45.176.0/24 -p udp -m udp --dport 20 -j ACCEPT
-A INPUT -s 175.45.176.0/24 -p udp -m udp --dport 21 -j ACCEPT
-A INPUT -p udp -m udp --dport 5060 -j DROP
-A INPUT -p tcp -m tcp --dport 5060 -j DROP
-A OUTPUT -s 1.1.1.3/32 -j DROP
-A OUTPUT -s 1.1.1.3/32 -d 173.245.48.0/20 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 103.21.244.0/22 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 103.22.200.0/22 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 103.31.4.0/22 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 141.101.64.0/18 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 108.162.192.0/18 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 190.93.240.0/20 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 188.114.96.0/20 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 197.234.240.0/22 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 198.41.128.0/17 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 162.158.0.0/15 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 104.16.0.0/12 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 172.64.0.0/13 -j ACCEPT
-A OUTPUT -s 1.1.1.3/32 -d 131.0.72.0/22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 20 -j DROP
-A OUTPUT -p tcp -m tcp --sport 21 -j DROP
-A OUTPUT -p udp -m udp --sport 20 -j DROP
-A OUTPUT -p udp -m udp --sport 21 -j DROP
-A OUTPUT -d 175.45.176.0/24 -p tcp -m tcp --sport 20 -j ACCEPT
-A OUTPUT -d 175.45.176.0/24 -p tcp -m tcp --sport 21 -j ACCEPT
-A OUTPUT -d 175.45.176.0/24 -p udp -m udp --sport 20 -j ACCEPT
-A OUTPUT -d 175.45.176.0/24 -p udp -m udp --sport 21 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 25 -j DROP
-A OUTPUT -p udp -m udp --sport 25 -j DROP
-A OUTPUT -p tcp -m tcp --sport 5060 -j DROP
-A OUTPUT -p udp -m udp --sport 5060 -j DROP
COMMIT
# Completed on Sun Sep 20 16:27:04 2020
# Generated by iptables-save v1.8.5 on Sun Sep 20 16:27:04 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 5060 -j REDIRECT --to-ports 5061
COMMIT
# Completed on Sun Sep 20 16:27:04 2020
